# api/actress.go
@@ -1,7 +1,6 @@
 package api
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -77,9 +76,9 @@ func ActressDeleteApi(c *gin.Context) {
 type ActressList struct {
 	Page    int    `uri:"page" form:"page" json:"page"`
 	Size    int    `uri:"size" form:"size" json:"size"`
-	Action  string `uri:"action" form:"action" json:"action"`
-	Sort    string `uri:"sort" form:"sort" json:"sort"`
-	Actress string `uri:"actress"  form:"actress"  json:"actress"`
+	Action  string `uri:"action" form:"action" json:"action" example:"a.CreatedAt"`
+	Sort    string `uri:"sort" form:"sort" json:"sort" example:"desc"`
+	Actress string `uri:"actress"  form:"actress"  json:"actress" example:""`
 }
 
 // ActressListApi godoc
@@ -89,7 +88,7 @@ type ActressList struct {
 //	@Tags			actress
 //	@Accept			json
 //	@Produce		json
-//	@Param			data	formData	ActressList	true	"演员列表"
+//	@Param			data	body		ActressList	true	"演员列表"
 //	@Success		200		{object}	Success
 //	@Failure		400		{object}	Fail
 //	@Failure		404		{object}	NotFound
@@ -97,13 +96,10 @@ type ActressList struct {
 //	@Router			/actress/list [post]
 func ActressListApi(c *gin.Context) {
 	var bind ActressList
-	if err := c.Bind(&bind); err != nil {
+	if err := c.BindJSON(&bind); err != nil {
 		c.JSON(http.StatusBadRequest, util.Fail(err.Error()))
 		return
 	}
-
-	fmt.Printf("a: %+v \n", c.Request.Header)
-	fmt.Printf("b: %+v \n", c.ContentType())
 
 	actresss, err := as.List(bind.Page, bind.Size, bind.Action, bind.Sort, bind.Actress)
 	if err != nil {
